class 21 theory improved